javascript polling works, but is slow and jumpy. will fix soon.

--- a/private/scss/main.scss
+++ b/private/scss/main.scss
@@ -16,3 +16,16 @@ body {
 		padding: 0;
 	}
 }
+
+#controlPanel {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	width: 300px;
+	height: 100%;
+	background: #666;
+	border-left: 10px solid #339;
+	padding: 20px;
+	box-sizing: border-box;
+}
